Document PPDG/src/objects/Clause_Item__c.object
<CustomObject>
    <fields>
        <fullName>Clause_HTML__c</fullName>
        <label>Clause HTML</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Clause__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clause</label>
        <referenceTo>Standard_Clause__c</referenceTo>
        <relationshipLabel>Clause Items</relationshipLabel>
        <relationshipName>Clause_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clause_section__c</fullName>
        <label>Clause/section</label>
        <picklist>
            <picklistValues>
                <fullName>1.1 a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paragraph 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paragraph 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guarantor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At the end of 5.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amortisation: Full warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amortisation: Partial/no warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.1 b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.1 c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5 c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Important notice Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff condition 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff condition 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>i</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.3.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.3.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>p</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Clause Items</relationshipLabel>
        <relationshipName>Clause_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ref__c</fullName>
        <formula>Name &amp; &quot;-&quot; &amp; Clause__r.Clause_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ref</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type2__c</fullName>
        <label>Type2</label>
        <picklist>
            <picklistValues>
                <fullName>Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non panel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refinancing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guarantor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTL Refinance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All products for BTL and HPP excluding BRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTLLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTLLC Rent Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTLLC New Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTLLC Refinance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Clause Item</label>
    <nameField>
        <label>Clause Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clause Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>